# RemoteTorrentClient

./: CMakeLists.txt  README.md  conanfile.txt  main.cpp
config/: config.json  telegramConfig.json  torrentConfig.json
include/Application/: ApplicationImpl.hpp  IApplication.hpp
include/Domain/: DomainImpl.hpp  GenericTorrentBuilder.hpp  IDomain.hpp  ITorrentClient.hpp  Torrent.hpp  TorrentBuilder.hpp
include/Domain/TransmissionImpl/: TransmissionTorrentClient.hpp  TransmissionTorrentParser.hpp  TransmissionTorrentPerformer.hpp
include/Framework/: IAdapter.hpp  Interface.hpp
include/Framework/Adapters/: TgAdapter.hpp
include/Utils/: FileReader.hpp  FileWriter.hpp  JsonConfigReader.hpp  StringOperations.hpp  WrongConfigPathException.hpp
src/: CMakeLists.txt
src/Adapters/: TgAdapter.cpp
src/Application/: ApplicationImpl.cpp
src/Domain/: DomainImpl.cpp  Torrent.cpp
src/Domain/TransmissionImpl/: TransmissionTorrentClient.cpp  TransmissionTorrentParser.cpp  TransmissionTorrentPerformer.cpp
src/Framework/Adapters/: TgAdapter.cpp
src/Utils/: FileReader.cpp  FileWriter.cpp  JsonConfigReader.cpp  StringOperations.cpp  WrongConfigPathException.cpp
tests/: CMakeLists.txt  main_test.cpp
tests/TestEntities/: TestDomainImpl.cpp
tests/TransmissionTorrentEntitiesTest/: TransmissionParserTest.hpp
tests/UtilsTest/: JsonConfigReaderTest.hpp  StringOperationsTest.hpp  test.json
